Add a book on convex function

--- a/All.bib
+++ b/All.bib
@@ -6403,19 +6403,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6430,6 +6418,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -7786,22 +7786,7 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@InCollection{	  cairoli.dalang:95:optimal,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
-}
-
-@Article{	  cairoli.dalang:95:optimal*1,
+@Article{	  cairoli.dalang:95:optimal,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -7815,6 +7800,21 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
+}
+
+@InCollection{	  cairoli.dalang:95:optimal*1,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -8666,6 +8666,23 @@
 
 @Article{	  cerrai.debussche:19:large,
   author	= {Cerrai, Sandra and Debussche, Arnaud},
+  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
+  journal	= {Appl. Math. Optim.},
+  fjournal	= {Applied Mathematics and Optimization},
+  volume	= {80},
+  year		= {2019},
+  number	= {1},
+  pages		= {81--102},
+  issn		= {0095-4616},
+  mrclass	= {35R60 (35B25 35K57)},
+  mrnumber	= {3978511},
+  mrreviewer	= {Jamil Abreu},
+  doi		= {10.1007/s00245-017-9459-4},
+  url		= {https://doi.org/10.1007/s00245-017-9459-4}
+}
+
+@Article{	  cerrai.debussche:19:large*1,
+  author	= {Cerrai, Sandra and Debussche, Arnaud},
   title		= {Large deviations for the two-dimensional stochastic
 		  {N}avier-{S}tokes equation with vanishing noise
 		  correlation},
@@ -8682,23 +8699,6 @@
   mrreviewer	= {Thomas Kelly Alberts},
   doi		= {10.1214/17-aihp881},
   url		= {https://doi.org/10.1214/17-aihp881}
-}
-
-@Article{	  cerrai.debussche:19:large*1,
-  author	= {Cerrai, Sandra and Debussche, Arnaud},
-  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
-  journal	= {Appl. Math. Optim.},
-  fjournal	= {Applied Mathematics and Optimization},
-  volume	= {80},
-  year		= {2019},
-  number	= {1},
-  pages		= {81--102},
-  issn		= {0095-4616},
-  mrclass	= {35R60 (35B25 35K57)},
-  mrnumber	= {3978511},
-  mrreviewer	= {Jamil Abreu},
-  doi		= {10.1007/s00245-017-9459-4},
-  url		= {https://doi.org/10.1007/s00245-017-9459-4}
 }
 
 @Article{	  cerrai.freidlin.ea:17:on,
@@ -11588,6 +11588,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -11603,17 +11614,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -12525,22 +12525,6 @@
 }
 
 @Article{	  corwin:16:kardar-parisi-zhang,
-  author	= {Corwin, Ivan},
-  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
-		  {MR}3445162]},
-  journal	= {Eur. Math. Soc. Newsl.},
-  fjournal	= {European Mathematical Society. Newsletter},
-  number	= {101},
-  year		= {2016},
-  pages		= {19--27},
-  issn		= {1027-488X},
-  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
-  mrnumber	= {3526310},
-  doi		= {10.4171/news/101/6},
-  url		= {https://doi.org/10.4171/news/101/6}
-}
-
-@Article{	  corwin:16:kardar-parisi-zhang*1,
   author	= {Corwin, I.},
   title		= {Kardar-{P}arisi-{Z}hang universality},
   journal	= {Notices Amer. Math. Soc.},
@@ -12555,6 +12539,22 @@
   mrreviewer	= {Flora Koukiou},
   doi		= {10.1090/noti1334},
   url		= {https://doi.org/10.1090/noti1334}
+}
+
+@Article{	  corwin:16:kardar-parisi-zhang*1,
+  author	= {Corwin, Ivan},
+  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
+		  {MR}3445162]},
+  journal	= {Eur. Math. Soc. Newsl.},
+  fjournal	= {European Mathematical Society. Newsletter},
+  number	= {101},
+  year		= {2016},
+  pages		= {19--27},
+  issn		= {1027-488X},
+  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
+  mrnumber	= {3526310},
+  doi		= {10.4171/news/101/6},
+  url		= {https://doi.org/10.4171/news/101/6}
 }
 
 @Article{	  corwin:18:commentary,
@@ -13560,22 +13560,7 @@
   url		= {https://doi.org/10.1214/21-EJP589}
 }
 
-@InCollection{	  dalang.leveque:04:second-order,
-  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
-  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
-		  boundary noises},
-  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
-		  {A}pplications {IV}},
-  series	= {Progr. Probab.},
-  volume	= {58},
-  pages		= {83--93},
-  publisher	= {Birkh\"{a}user, Basel},
-  year		= {2004},
-  mrclass	= {60H15 (35L10 35R60)},
-  mrnumber	= {2096282}
-}
-
-@Article{	  dalang.leveque:04:second-order*1,
+@Article{	  dalang.leveque:04:second-order,
   author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
   title		= {Second-order linear hyperbolic {SPDE}s driven by isotropic
 		  {G}aussian noise on a sphere},
@@ -13591,6 +13576,21 @@
   mrreviewer	= {Anna Karczewska},
   doi		= {10.1214/aop/1079021472},
   url		= {https://doi.org/10.1214/aop/1079021472}
+}
+
+@InCollection{	  dalang.leveque:04:second-order*1,
+  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
+  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
+		  boundary noises},
+  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
+		  {A}pplications {IV}},
+  series	= {Progr. Probab.},
+  volume	= {58},
+  pages		= {83--93},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2004},
+  mrclass	= {60H15 (35L10 35R60)},
+  mrnumber	= {2096282}
 }
 
 @Article{	  dalang.leveque:06:second-order,
@@ -14713,23 +14713,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -14745,6 +14728,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -16729,6 +16729,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -16741,21 +16756,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -18009,20 +18009,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {III}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xvii+292},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698781}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*1,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -18035,7 +18021,7 @@
   mrnumber	= {698779}
 }
 
-@Book{		  erdelyi.magnus.ea:81:higher*2,
+@Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {II}},
@@ -18047,6 +18033,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {III}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xvii+292},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698781}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -21586,6 +21586,24 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -21601,24 +21619,6 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -23329,7 +23329,20 @@
   url		= {https://doi.org/10.1088/0951-7715/23/4/008}
 }
 
-@Article{	  hairer.manson:10:periodic,
+@InCollection{	  hairer.manson:10:periodic,
+  author	= {Hairer, Martin and Manson, Charles},
+  title		= {Periodic homogenization with an interface},
+  booktitle	= {Progress in analysis and its applications},
+  pages		= {410--416},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2010},
+  mrclass	= {60J60 (60F05)},
+  mrnumber	= {2766949},
+  doi		= {10.1142/9789814313179\_0053},
+  url		= {https://doi.org/10.1142/9789814313179_0053}
+}
+
+@Article{	  hairer.manson:10:periodic*1,
   author	= {Hairer, Martin and Manson, Charles},
   title		= {Periodic homogenization with an interface: the
 		  one-dimensional case},
@@ -23345,19 +23358,6 @@
   mrreviewer	= {Nicolas Saintier},
   doi		= {10.1016/j.spa.2010.03.016},
   url		= {https://doi.org/10.1016/j.spa.2010.03.016}
-}
-
-@InCollection{	  hairer.manson:10:periodic*1,
-  author	= {Hairer, Martin and Manson, Charles},
-  title		= {Periodic homogenization with an interface},
-  booktitle	= {Progress in analysis and its applications},
-  pages		= {410--416},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2010},
-  mrclass	= {60J60 (60F05)},
-  mrnumber	= {2766949},
-  doi		= {10.1142/9789814313179\_0053},
-  url		= {https://doi.org/10.1142/9789814313179_0053}
 }
 
 @Article{	  hairer.manson:11:periodic,
@@ -24188,6 +24188,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -24195,18 +24207,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -27799,25 +27799,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -27832,6 +27813,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -33718,24 +33718,6 @@
 
 @Article{	  malliavin.nualart:93:quasi-sure,
   author	= {Malliavin, Paul and Nualart, David},
-  title		= {Quasi-sure analysis and {S}tratonovich anticipative
-		  stochastic differential equations},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {1},
-  pages		= {45--55},
-  issn		= {0178-8051},
-  mrclass	= {60H10 (60H07)},
-  mrnumber	= {1222364},
-  mrreviewer	= {Daniel Ocone},
-  doi		= {10.1007/BF01195882},
-  url		= {https://doi.org/10.1007/BF01195882}
-}
-
-@Article{	  malliavin.nualart:93:quasi-sure*1,
-  author	= {Malliavin, Paul and Nualart, David},
   title		= {Quasi-sure analysis of stochastic flows and {B}anach space
 		  valued smooth functionals on the {W}iener space},
   journal	= {J. Funct. Anal.},
@@ -33750,6 +33732,24 @@
   mrreviewer	= {Vladimir I. Bogachev},
   doi		= {10.1006/jfan.1993.1034},
   url		= {https://doi.org/10.1006/jfan.1993.1034}
+}
+
+@Article{	  malliavin.nualart:93:quasi-sure*1,
+  author	= {Malliavin, Paul and Nualart, David},
+  title		= {Quasi-sure analysis and {S}tratonovich anticipative
+		  stochastic differential equations},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {1},
+  pages		= {45--55},
+  issn		= {0178-8051},
+  mrclass	= {60H10 (60H07)},
+  mrnumber	= {1222364},
+  mrreviewer	= {Daniel Ocone},
+  doi		= {10.1007/BF01195882},
+  url		= {https://doi.org/10.1007/BF01195882}
 }
 
 @Book{		  malliavin.thalmaier:06:stochastic,
@@ -37748,24 +37748,6 @@
 
 @Article{	  nane:06:iterated,
   author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
-}
-
-@Article{	  nane:06:iterated*1,
-  author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
   fjournal	= {Potential Analysis. An International Journal Devoted to
@@ -37781,6 +37763,24 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Article{	  nane:06:iterated*1,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Book{		  nane:06:iterated*2,
@@ -38230,6 +38230,23 @@
   mrnumber	= {4152645},
   doi		= {10.1214/20-AOP1425},
   url		= {https://doi.org/10.1214/20-AOP1425}
+}
+
+@Book{		  niculescu.persson:18:convex,
+  author	= {Niculescu, Constantin P. and Persson, Lars-Erik},
+  title		= {Convex functions and their applications},
+  series	= {CMS Books in Mathematics/Ouvrages de Math\'{e}matiques de
+		  la SMC},
+  note		= {A contemporary approach, Second edition of [ MR2178902]},
+  publisher	= {Springer, Cham},
+  year		= {2018},
+  pages		= {xvii+415},
+  isbn		= {978-3-319-78336-9; 978-3-319-78337-6},
+  mrclass	= {26-01 (26A51 26B25 26D99 52A41 90C25)},
+  mrnumber	= {3821518},
+  mrreviewer	= {\'{A}rp\'{a}d Baricz},
+  doi		= {10.1007/978-3-319-78337-6},
+  url		= {https://doi.org/10.1007/978-3-319-78337-6}
 }
 
 @InCollection{	  nienhuis:87:coulomb,
@@ -38736,23 +38753,6 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -38767,6 +38767,23 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -40342,25 +40359,7 @@
   url		= {https://doi.org/10.1080/17442508808833542}
 }
 
-@Article{	  nualart.ustunel.ea:90:some,
-  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
-  title		= {Some relations among classes of {$\sigma$}-fields on
-		  {W}iener space},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {85},
-  year		= {1990},
-  number	= {1},
-  pages		= {119--129},
-  issn		= {0178-8051},
-  mrclass	= {60H05 (28C20 46G12 60H07)},
-  mrnumber	= {1044304},
-  mrreviewer	= {Ana Bela Cruzeiro},
-  doi		= {10.1007/BF01377633},
-  url		= {https://doi.org/10.1007/BF01377633}
-}
-
-@InCollection{	  nualart.ustunel.ea:90:some*1,
+@InCollection{	  nualart.ustunel.ea:90:some,
   author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
   title		= {Some remarks on independence and conditioning on {W}iener
 		  space},
@@ -40376,6 +40375,24 @@
   mrreviewer	= {Denis R. Bell},
   doi		= {10.1007/BFb0083612},
   url		= {https://doi.org/10.1007/BFb0083612}
+}
+
+@Article{	  nualart.ustunel.ea:90:some*1,
+  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
+  title		= {Some relations among classes of {$\sigma$}-fields on
+		  {W}iener space},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {85},
+  year		= {1990},
+  number	= {1},
+  pages		= {119--129},
+  issn		= {0178-8051},
+  mrclass	= {60H05 (28C20 46G12 60H07)},
+  mrnumber	= {1044304},
+  mrreviewer	= {Ana Bela Cruzeiro},
+  doi		= {10.1007/BF01377633},
+  url		= {https://doi.org/10.1007/BF01377633}
 }
 
 @Article{	  nualart.ustunel:89:extension,
@@ -42037,22 +42054,6 @@
 
 @Article{	  ondrejat:10:stochastic,
   author	= {Ondrej\'{a}t, Martin},
-  title		= {Stochastic nonlinear wave equations in local {S}obolev
-		  spaces},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {15},
-  year		= {2010},
-  pages		= {no. 33, 1041--1091},
-  mrclass	= {60H15},
-  mrnumber	= {2659757},
-  mrreviewer	= {Chunrong Feng},
-  doi		= {10.1214/EJP.v15-789},
-  url		= {https://doi.org/10.1214/EJP.v15-789}
-}
-
-@Article{	  ondrejat:10:stochastic*1,
-  author	= {Ondrej\'{a}t, Martin},
   title		= {Stochastic wave equation with critical nonlinearities:
 		  temporal regularity and uniqueness},
   journal	= {J. Differential Equations},
@@ -42066,6 +42067,22 @@
   mrnumber	= {2593599},
   doi		= {10.1016/j.jde.2009.12.010},
   url		= {https://doi.org/10.1016/j.jde.2009.12.010}
+}
+
+@Article{	  ondrejat:10:stochastic*1,
+  author	= {Ondrej\'{a}t, Martin},
+  title		= {Stochastic nonlinear wave equations in local {S}obolev
+		  spaces},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {15},
+  year		= {2010},
+  pages		= {no. 33, 1041--1091},
+  mrclass	= {60H15},
+  mrnumber	= {2659757},
+  mrreviewer	= {Chunrong Feng},
+  doi		= {10.1214/EJP.v15-789},
+  url		= {https://doi.org/10.1214/EJP.v15-789}
 }
 
 @Article{	  ono:97:global,
@@ -45016,22 +45033,6 @@
 
 @Article{	  rovira.tindel:00:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
-  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
-  journal	= {Stochastics Stochastics Rep.},
-  fjournal	= {Stochastics and Stochastics Reports},
-  volume	= {69},
-  year		= {2000},
-  number	= {1-2},
-  pages		= {11--30},
-  issn		= {1045-1129},
-  mrclass	= {60F10 (60H15)},
-  mrnumber	= {1751716},
-  doi		= {10.1080/17442500008834230},
-  url		= {https://doi.org/10.1080/17442500008834230}
-}
-
-@Article{	  rovira.tindel:00:sharp*1,
-  author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for a certain class of
 		  sets on the {W}iener space},
   journal	= {Bull. Sci. Math.},
@@ -45048,22 +45049,23 @@
   url		= {https://doi.org/10.1016/S0007-4497(00)01062-9}
 }
 
-@InCollection{	  rovira.tindel:01:sharp,
-  author	= {Rovira, C. and Tindel, S.},
-  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
-  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
-		  1998)},
-  series	= {Progr. Probab.},
-  volume	= {48},
-  pages		= {225--244},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2001},
-  mrclass	= {60H15 (60F10)},
-  mrnumber	= {1915457},
-  mrreviewer	= {Giambattista Giacomin}
+@Article{	  rovira.tindel:00:sharp*1,
+  author	= {Rovira, Carles and Tindel, Samy},
+  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {69},
+  year		= {2000},
+  number	= {1-2},
+  pages		= {11--30},
+  issn		= {1045-1129},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {1751716},
+  doi		= {10.1080/17442500008834230},
+  url		= {https://doi.org/10.1080/17442500008834230}
 }
 
-@Article{	  rovira.tindel:01:sharp*1,
+@Article{	  rovira.tindel:01:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for the stochastic heat
 		  equation},
@@ -45081,6 +45083,21 @@
   mrreviewer	= {Zhongmin Qian},
   doi		= {10.1023/A:1011286304117},
   url		= {https://doi.org/10.1023/A:1011286304117}
+}
+
+@InCollection{	  rovira.tindel:01:sharp*1,
+  author	= {Rovira, C. and Tindel, S.},
+  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
+  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
+		  1998)},
+  series	= {Progr. Probab.},
+  volume	= {48},
+  pages		= {225--244},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2001},
+  mrclass	= {60H15 (60F10)},
+  mrnumber	= {1915457},
+  mrreviewer	= {Giambattista Giacomin}
 }
 
 @Article{	  rovira.tindel:05:on,
@@ -46957,21 +46974,7 @@
   url		= {https://doi.org/10.1007/s10955-011-0155-5}
 }
 
-@Article{	  sierocinski.zabczyk:89:on,
-  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
-  title		= {On a packing problem},
-  journal	= {Bull. Polish Acad. Sci. Math.},
-  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
-  volume	= {37},
-  year		= {1989},
-  number	= {1-6},
-  pages		= {305--313 (1990)},
-  issn		= {0239-7269},
-  mrclass	= {90C39 (90B99)},
-  mrnumber	= {1101484}
-}
-
-@InCollection{	  sierocinski.zabczyk:89:on*1,
+@InCollection{	  sierocinski.zabczyk:89:on,
   author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
   title		= {On a packing problem},
   booktitle	= {Stochastic systems and optimization ({W}arsaw, 1988)},
@@ -46984,6 +46987,20 @@
   mrnumber	= {1180793},
   doi		= {10.1007/BFb0002695},
   url		= {https://doi.org/10.1007/BFb0002695}
+}
+
+@Article{	  sierocinski.zabczyk:89:on*1,
+  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
+  title		= {On a packing problem},
+  journal	= {Bull. Polish Acad. Sci. Math.},
+  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
+  volume	= {37},
+  year		= {1989},
+  number	= {1-6},
+  pages		= {305--313 (1990)},
+  issn		= {0239-7269},
+  mrclass	= {90C39 (90B99)},
+  mrnumber	= {1101484}
 }
 
 @Article{	  silverstein:67:new,
@@ -48876,6 +48893,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -48890,23 +48924,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -48929,6 +48946,23 @@
 
 @Article{	  tracy.widom:10:formulas,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {Formulas for joint probabilities for the asymmetric simple
+		  exclusion process},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {51},
+  year		= {2010},
+  number	= {6},
+  pages		= {063302, 10},
+  issn		= {0022-2488},
+  mrclass	= {82C22},
+  mrnumber	= {2675194},
+  doi		= {10.1063/1.3431977},
+  url		= {https://doi.org/10.1063/1.3431977}
+}
+
+@Article{	  tracy.widom:10:formulas*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {Formulas for {ASEP} with two-sided {B}ernoulli initial
 		  condition},
   journal	= {J. Stat. Phys.},
@@ -48943,23 +48977,6 @@
   mrreviewer	= {Dimitri Petritis},
   doi		= {10.1007/s10955-010-0013-x},
   url		= {https://doi.org/10.1007/s10955-010-0013-x}
-}
-
-@Article{	  tracy.widom:10:formulas*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {Formulas for joint probabilities for the asymmetric simple
-		  exclusion process},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {51},
-  year		= {2010},
-  number	= {6},
-  pages		= {063302, 10},
-  issn		= {0022-2488},
-  mrclass	= {82C22},
-  mrnumber	= {2675194},
-  doi		= {10.1063/1.3431977},
-  url		= {https://doi.org/10.1063/1.3431977}
 }
 
 @Article{	  tracy.widom:11:erratum,
@@ -49073,24 +49090,6 @@
 
 @Article{	  tracy.widom:13:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the diagonal susceptibility of the two-dimensional
-		  {I}sing model},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {54},
-  year		= {2013},
-  number	= {12},
-  pages		= {123302, 9},
-  issn		= {0022-2488},
-  mrclass	= {81V35 (81R12)},
-  mrnumber	= {3156118},
-  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
-  doi		= {10.1063/1.4836779},
-  url		= {https://doi.org/10.1063/1.4836779}
-}
-
-@Article{	  tracy.widom:13:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the asymmetric simple exclusion process with multiple
 		  species},
   journal	= {J. Stat. Phys.},
@@ -49105,6 +49104,24 @@
   mrreviewer	= {Anja Vo\ss -B\"{o}hme},
   doi		= {10.1007/s10955-012-0531-9},
   url		= {https://doi.org/10.1007/s10955-012-0531-9}
+}
+
+@Article{	  tracy.widom:13:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the diagonal susceptibility of the two-dimensional
+		  {I}sing model},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {54},
+  year		= {2013},
+  number	= {12},
+  pages		= {123302, 9},
+  issn		= {0022-2488},
+  mrclass	= {81V35 (81R12)},
+  mrnumber	= {3156118},
+  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
+  doi		= {10.1063/1.4836779},
+  url		= {https://doi.org/10.1063/1.4836779}
 }
 
 @Article{	  tracy.widom:14:on,
@@ -49567,6 +49584,21 @@
 
 @Article{	  tracy:88:universality,
   author	= {Tracy, Craig A.},
+  title		= {Universality classes of some aperiodic {I}sing models},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and General},
+  volume	= {21},
+  year		= {1988},
+  number	= {11},
+  pages		= {L603--L605},
+  issn		= {0305-4470},
+  mrclass	= {82A68 (82-04 82A25)},
+  mrnumber	= {953188},
+  url		= {http://stacks.iop.org/0305-4470/21/L603}
+}
+
+@Article{	  tracy:88:universality*1,
+  author	= {Tracy, Craig A.},
   title		= {Universality class of a {F}ibonacci {I}sing model},
   journal	= {J. Statist. Phys.},
   fjournal	= {Journal of Statistical Physics},
@@ -49580,21 +49612,6 @@
   mrreviewer	= {Peter J. Forrester},
   doi		= {10.1007/BF01028467},
   url		= {https://doi.org/10.1007/BF01028467}
-}
-
-@Article{	  tracy:88:universality*1,
-  author	= {Tracy, Craig A.},
-  title		= {Universality classes of some aperiodic {I}sing models},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and General},
-  volume	= {21},
-  year		= {1988},
-  number	= {11},
-  pages		= {L603--L605},
-  issn		= {0305-4470},
-  mrclass	= {82A68 (82-04 82A25)},
-  mrnumber	= {953188},
-  url		= {http://stacks.iop.org/0305-4470/21/L603}
 }
 
 @InCollection{	  tracy:89:introduction,
@@ -51715,21 +51732,7 @@
   url		= {https://doi.org/10.1007/BFb0002685}
 }
 
-@InProceedings{	  zabczyk:89:some,
-  author	= {Zabczyk, Jerzy},
-  title		= {Some interplays between control theory and stochastic
-		  systems},
-  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
-		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
-  pages		= {229--231},
-  publisher	= {IEEE, New York},
-  year		= {1989},
-  mrclass	= {93E03 (93C25)},
-  mrnumber	= {1038935},
-  mrreviewer	= {Akira Ichikawa}
-}
-
-@Article{	  zabczyk:89:some*1,
+@Article{	  zabczyk:89:some,
   author	= {Zabczyk, J.},
   title		= {Some comments on stabilizability},
   journal	= {Appl. Math. Optim.},
@@ -51744,6 +51747,20 @@
   mrreviewer	= {Enrique Zuazua},
   doi		= {10.1007/BF01448189},
   url		= {https://doi.org/10.1007/BF01448189}
+}
+
+@InProceedings{	  zabczyk:89:some*1,
+  author	= {Zabczyk, Jerzy},
+  title		= {Some interplays between control theory and stochastic
+		  systems},
+  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
+		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
+  pages		= {229--231},
+  publisher	= {IEEE, New York},
+  year		= {1989},
+  mrclass	= {93E03 (93C25)},
+  mrnumber	= {1038935},
+  mrreviewer	= {Akira Ichikawa}
 }
 
 @InCollection{	  zabczyk:89:symmetric,
